rust/cube/cubeplanner/tests/snapshots/dialects__sqlite_by_month.snap
---
source: cubeplanner/tests/dialects.rs
expression: "by_month(Dialect :: Sqlite).sql"
---
SELECT strftime('%Y-%m-01T00:00:00.000', strftime('%Y-%m-%dT%H:%M:%f', "orders".created_at) || '-00:00') "orders__created_at_month", count("orders".id) "orders__count" 
FROM  (SELECT * FROM public.orders WHERE (created_at >= strftime('%Y-%m-%dT%H:%M:%f', ?) AND created_at <= strftime('%Y-%m-%dT%H:%M:%f', ?)) AND 1 = 1
)  AS "orders"
WHERE ("orders".created_at >= strftime('%Y-%m-%dT%H:%M:%f', ?) AND "orders".created_at <= strftime('%Y-%m-%dT%H:%M:%f', ?))
GROUP BY 1
ORDER BY  1  ASC
